@@ -1,3 +1,10 @@
+2005-01-11  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/book/custom/custom_widget/mywidget.cc: Fix from Marco 
+	(mshcoltn) to make this widget actually draw something: on_realize():
+	Use get_window() instead of creating our own Gdk::Window. I am not 
+	sure why this works, but it is simpler.
+
 2.5.5:
 
 2005-01-10  Murray Cumming  <murrayc@murrayc.com>
